[gd_scene load_steps=6 format=2]

[ext_resource path="res://Objects/Campfire.gd" type="Script" id=1]
[ext_resource path="res://Objects/campfire.png" type="Texture" id=2]
[ext_resource path="res://Effects/light.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 16 )

[sub_resource type="Animation" id=1]
resource_name = "Active"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 19 ]
}

[node name="Campfire" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 16, -16 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 16, -16 )
z_index = -1
texture = ExtResource( 2 )
vframes = 5
hframes = 4
frame = 17

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 16, -16 )
texture = ExtResource( 3 )
texture_scale = 0.5
color = Color( 1, 0.811765, 0.168627, 1 )
shadow_enabled = true

[node name="FlickerTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="HealTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Active = SubResource( 1 )
[connection signal="timeout" from="FlickerTimer" to="." method="_on_FlickerTimer_timeout"]
[connection signal="timeout" from="HealTimer" to="." method="_on_HealTimer_timeout"]
